# labs-os-floryajulya

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  child  child.cpp  cmake_install.cmake  mtest  mtest.cpp  output.txt  parent  parent.cpp
Testing/Temporary/: CTestCostData.txt
